<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_about"
    tools:context=".presentation.fragments.infoscreen.AboutTimerFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_icon_back" />
    <TextView
        android:id="@+id/about_tmr"
        style="@style/infoFragmentTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/about_timer"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/lungs"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_ic24_lungs"
        app:layout_constraintLeft_toLeftOf="@id/about_tmr"
        app:layout_constraintRight_toRightOf="@id/about_tmr"
        app:layout_constraintTop_toBottomOf="@+id/about_tmr"/>

    <TextView
        android:id="@+id/text_1"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@id/lungs"
        app:layout_constraintRight_toRightOf="@id/lungs"
        style="@style/TextStyleRelax"
        app:layout_constraintTop_toBottomOf="@id/lungs"
        android:text="@string/about_text1" />
    <View
        android:id="@+id/stop_watch"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/ic_ic24_stopwatch"
        app:layout_constraintLeft_toLeftOf="@id/text_1"
        app:layout_constraintRight_toRightOf="@id/text_1"
        app:layout_constraintTop_toBottomOf="@+id/text_1"/>

    <TextView
        android:id="@+id/text_2"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@id/stop_watch"
        app:layout_constraintRight_toRightOf="@id/stop_watch"
        style="@style/TextStyleRelax"
        app:layout_constraintTop_toBottomOf="@id/stop_watch"
        android:text="@string/about_text2" />
    <View
        android:id="@+id/metro"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/ic_ic24_metro"
        app:layout_constraintLeft_toLeftOf="@id/text_2"
        app:layout_constraintRight_toRightOf="@id/text_2"
        app:layout_constraintTop_toBottomOf="@+id/text_2"/>

    <TextView
        android:id="@+id/text_3"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@id/metro"
        app:layout_constraintRight_toRightOf="@id/metro"
        style="@style/TextStyleRelax"
        app:layout_constraintTop_toBottomOf="@id/metro"
        android:text="@string/about_text3" />
    <View
        android:id="@+id/brightness"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/ic_ic24_brightness_low"
        app:layout_constraintLeft_toLeftOf="@id/text_3"
        app:layout_constraintRight_toRightOf="@id/text_3"
        app:layout_constraintTop_toBottomOf="@+id/text_3"/>

    <TextView
        android:id="@+id/text_4"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@id/brightness"
        app:layout_constraintRight_toRightOf="@id/brightness"
        style="@style/TextStyleRelax"
        app:layout_constraintTop_toBottomOf="@id/brightness"
        android:text="@string/about_text4" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="326dp"
        android:background="@drawable/ic_frame_about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/relax_btn"
        style="@style/infoFragmentTextStyle"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:background="@drawable/oval_button"
        android:elevation="8dp"
        android:layout_marginBottom="140dp"
        android:text="@string/breathing"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scheme_btn"
        style="@style/infoFragmentTextStyle"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:background="@drawable/oval_button_white"
        android:elevation="8dp"
        android:layout_marginBottom="157dp"
        android:text="@string/Schemes"
        android:textColor="@color/color6"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/relax_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>