<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_about"
        tools:context=".presentation.fragments.infoscreen.AboutFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_icon_back" />
    <TextView
        android:id="@+id/about_tv"
        style="@style/infoFragmentTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/about_timer"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_1"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        app:layout_constraintLeft_toLeftOf="@id/about_tv"
        app:layout_constraintRight_toRightOf="@id/about_tv"
        style="@style/TextStyleRelax"
        app:layout_constraintTop_toBottomOf="@id/about_tv"
        android:text="@string/about" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="326dp"
            android:background="@drawable/ic_frame_about"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/relax_btn"
            style="@style/infoFragmentTextStyle"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:background="@drawable/oval_button"
            android:elevation="8dp"
            android:layout_marginBottom="157dp"
            android:text="@string/breathing"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>