<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".presentation.fragments.infoscreen.schemescreen.SchemeBreathFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_icon_back" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/relax_btn"
        android:layout_width="340dp"
        android:layout_height="140dp"
        android:text="@string/relax"
        style="@style/infoFragmentTextStyle"
        android:layout_marginTop="150dp"
        android:background="@drawable/oval_button_3"
        android:elevation="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/balance_btn"
        android:layout_width="340dp"
        android:text="@string/balance"
        android:layout_height="140dp"
        style="@style/infoFragmentTextStyle"
        android:background="@drawable/oval_button_white"
        android:elevation="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relax_btn"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cheerful_btn"
        style="@style/infoFragmentTextStyle"
        android:layout_width="340dp"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/oval_button2"
        android:elevation="8dp"
        android:text="@string/cheerfulness"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balance_btn" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="324dp"
        android:background="@drawable/ic_frame_schemes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>