<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_about"
    tools:context=".presentation.fragments.infoscreen.RecomendationsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_icon_back" />

    <TextView
        android:id="@+id/recom_tv"
        style="@style/infoFragmentTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/recomendations"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/heart"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_ic24_heart"
        app:layout_constraintLeft_toLeftOf="@id/recom_tv"
        app:layout_constraintRight_toRightOf="@id/recom_tv"
        app:layout_constraintTop_toBottomOf="@+id/recom_tv"/>

    <TextView
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/TextStyleRelax"
        app:layout_constraintTop_toBottomOf="@id/heart"
        android:text="@string/recomendation_text" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="326dp"
        android:background="@drawable/ic_frame_about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/relax_btn"
        style="@style/infoFragmentTextStyle"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/oval_button"
        android:elevation="8dp"
        android:text="@string/breathing"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>