<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".presentation.fragments.infoscreen.schemescreen.RelaxFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_icon_back" />

    <View
        android:layout_width="111dp"
        android:layout_height="185dp"
        android:background="@drawable/ic_frame_relax"
        app:layout_constraintBottom_toTopOf="@id/tv_container"
        app:layout_constraintLeft_toLeftOf="@id/tv_container"
        app:layout_constraintRight_toRightOf="@+id/tv_container" />

    <View
        android:id="@+id/tv_container"
        android:layout_width="340dp"
        android:layout_height="420dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/oval_button_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/relax_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relax"
        android:layout_marginTop="10dp"
        style="@style/infoFragmentTextStyle"
        app:layout_constraintTop_toTopOf="@id/tv_container"
        app:layout_constraintLeft_toLeftOf="@id/tv_container"
        app:layout_constraintRight_toRightOf="@id/tv_container"/>

    <TextView
        android:id="@+id/relax_text_tv"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        style="@style/TextStyleRelax"
        android:text="@string/relax_text1"
        app:layout_constraintTop_toBottomOf="@id/relax_tv"
        app:layout_constraintLeft_toLeftOf="@id/relax_tv"
        app:layout_constraintBottom_toBottomOf="@id/tv_container"
        app:layout_constraintRight_toRightOf="@id/relax_tv"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/relax_btn"
        style="@style/infoFragmentTextStyle"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/oval_button"
        android:elevation="8dp"
        android:text="@string/breathing"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_container" />

</androidx.constraintlayout.widget.ConstraintLayout>