<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.BreathFragment">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@android:color/transparent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/breath_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:elevation="8dp"
        android:width="240dp"
        android:height="60dp"
        android:background="@drawable/oval_button"
        android:text="@string/breathing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_exh_btn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/time_training"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="423dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="320dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breath"
        app:layout_constraintEnd_toEndOf="@+id/time_breath_btn"
        app:layout_constraintStart_toStartOf="@+id/time_breath_btn"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait"
        app:layout_constraintEnd_toEndOf="@+id/time_wait_btn"
        app:layout_constraintStart_toStartOf="@+id/time_wait_btn"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exhalation"
        app:layout_constraintEnd_toEndOf="@+id/time_exh_btn"
        app:layout_constraintStart_toStartOf="@+id/time_exh_btn"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait"
        app:layout_constraintEnd_toEndOf="@+id/time_wait2_btn"
        app:layout_constraintStart_toStartOf="@+id/time_wait2_btn"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/time_breath_btn"
        style="@style/systemButtonStyle"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:ellipsize="none"
        app:layout_constraintBottom_toBottomOf="@+id/time_wait_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/time_wait_btn"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/time_wait_btn"
        style="@style/systemButtonStyle"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/time_exh_btn"
        app:layout_constraintLeft_toRightOf="@+id/time_breath_btn"
        app:layout_constraintRight_toLeftOf="@id/time_exh_btn"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/time_exh_btn"
        style="@style/systemButtonStyle"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/time_wait2_btn"
        app:layout_constraintLeft_toRightOf="@+id/time_wait_btn"
        app:layout_constraintRight_toLeftOf="@id/time_wait2_btn"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/time_wait2_btn"
        style="@style/systemButtonStyle"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toRightOf="@+id/time_exh_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:indeterminate="false"
        app:indicatorInset="5dp"
        app:indicatorSize="170px"
        app:layout_constraintBottom_toBottomOf="@+id/time_exercise_tv"
        app:layout_constraintLeft_toLeftOf="@+id/time_exercise_tv"
        app:layout_constraintRight_toRightOf="@+id/time_exercise_tv"
        app:layout_constraintTop_toTopOf="@+id/time_exercise_tv" />

    <TextView
        android:id="@+id/time_exercise_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="10:00"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>